add jamie bio to index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
       </div>
       <!-- to here  -->
 
+      <div class="about">
+        <div class="bio-left">
+          <img src="./wonder-kraken.jpg" />
+        </div>
+        <div class="bio-right">
+          <h2>Jamie MLH</h2>
+          <p> I'm Jamie! I'm the product manager for MLH Localhost. </p>
+        </div>
+      </div>
+
     </div>
   </main>
 
