--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       </div>
       <!-- to here  -->
 
+            <!-- copy from here -->
+      <div class="about">
+        <div class="bio-left">
+          <img src="./wonder-kraken.jpg" />
+        </div>
+        <div class="bio-right">
+          <h2>WEddie Salce</h2>
+          <p> I'm the Wonder Kraken! I am a member of the Justice League. I am originally from Themyscira. When I'm not helping you with your Git workflow, you can find me hanging with my buds Bat Kraken and Super Kraken. </p>
+        </div>
+      </div>
+      <!-- to here  -->
+
     </div>
   </main>
 
